[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/store.gd" type="Script" id=1]

[node name="Panel" type="Panel"]
margin_left = 11.0
margin_top = 66.0
margin_right = 286.0
margin_bottom = 166.0
script = ExtResource( 1 )

[node name="MoneyLabel" type="Label" parent="."]
margin_left = 392.855
margin_top = -55.7229
margin_right = 516.855
margin_bottom = -24.7229
text = "[MoneyDisplay]
"
align = 1

[node name="StoreLabel" type="Label" parent="."]
margin_left = 85.6692
margin_top = 0.190979
margin_right = 209.669
margin_bottom = 31.191
text = "StoreName"
align = 1

[node name="StoreBuyBtn" type="Button" parent="."]
margin_left = 155.329
margin_top = 57.8235
margin_right = 251.329
margin_bottom = 83.8235
text = "Buy Shop"

[node name="StoreCountLabel" type="Label" parent="."]
margin_left = 96.8667
margin_top = 62.726
margin_right = 146.867
margin_bottom = 86.726
text = "[0]"
align = 1

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 115.852
margin_top = 32.535
margin_right = 254.852
margin_bottom = 50.535
max_value = 1.0

[node name="AddMoneyBtn" type="Button" parent="."]
margin_left = 5.0
margin_top = 21.0
margin_right = 96.0
margin_bottom = 78.0
text = "Add Money"

[node name="PopUpMessageBox" type="PopupDialog" parent="."]
visible = true
margin_left = 316.505
margin_top = 55.6465
margin_right = 629.505
margin_bottom = 180.646

[node name="PopUpMessageLabel" type="Label" parent="PopUpMessageBox"]
margin_left = 13.0
margin_top = 14.0
margin_right = 292.0
margin_bottom = 106.0
text = "You don't have enough Money"

[node name="StoreTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ProgressTimer" type="Timer" parent="."]
wait_time = 0.01
[connection signal="pressed" from="StoreBuyBtn" to="." method="_on_StoreBuyBtn_pressed"]
[connection signal="pressed" from="AddMoneyBtn" to="." method="_on_AddMoneyBtn_pressed"]
[connection signal="timeout" from="StoreTimer" to="." method="_on_StoreTimer_timeout"]
[connection signal="timeout" from="ProgressTimer" to="." method="_on_ProgressTrimer_timeout"]
